# vearo

./: .gitignore  Cargo.toml  README.md
crates/vearo/: Cargo.toml
crates/vearo-autograd/: Cargo.toml
crates/vearo-autograd/src/: lib.rs
crates/vearo-backend-cpu/: Cargo.toml  build.rs
crates/vearo-backend-cpu/examples/: conv_bench.rs
crates/vearo-backend-cpu/src/: lib.rs
crates/vearo-backend-cpu/src/asm/x86_64/: matmul.s
crates/vearo-backend-cpu/tests/: conv_fast_parity.rs
crates/vearo-backend-cuda/: Cargo.toml
crates/vearo-backend-cuda/src/: kernels.cu  kernels.ptx  lib.rs
crates/vearo-core/: Cargo.toml
crates/vearo-core/src/: device.rs  dtype.rs  lib.rs  shape.rs  storage.rs  tensor.rs
crates/vearo-nn/: Cargo.toml
crates/vearo-nn/src/: lib.rs
crates/vearo-optim/: Cargo.toml
crates/vearo-optim/src/: lib.rs
crates/vearo/examples/: bench_cnn.rs  bench_profile.rs  train_mlp.rs  tui_demo.rs
crates/vearo/src/: checkpoint.rs  lib.rs  metrics.rs
crates/vearo/src/tui/: canvas.rs  mod.rs
crates/vearo/tests/: batchnorm.rs  batchnorm_review.rs  checkpoint_hazards.rs  cnn_mnist.rs  complex_wirtinger.rs  dropout.rs  fused_attention_parity.rs  generate_submissions.rs  kaggle_bakeoff.rs  memory_regression.rs  train_cnn.rs  verification_harness.rs
scripts/: bench_pytorch.py  preprocess.py  setup_data.sh
test_data/: oracles.json
tests/: generate_oracles.py
tools/vearo-watch/: README.md  package-lock.json  package.json  tsconfig.json
tools/vearo-watch/source/: app.tsx  braille.ts  cli.tsx  runs.ts  stream.ts  theme.ts
tools/vearo-watch/source/components/: AxisChart.tsx  Chart.tsx  Panel.tsx  Panels.tsx  Shell.tsx  Widgets.tsx
