[workspace]
resolver = "3"
members = ["crates/*"]
# A bare `cargo build` or `cargo test` skips the CUDA backend, so the project
# builds and its CPU tests run on a machine with no CUDA toolkit installed.
# Use `--workspace` (or `-p vearo-backend-cuda`) to include it.
default-members = [
    "crates/vearo-core",
    "crates/vearo-autograd",
    "crates/vearo-backend-cpu",
    "crates/vearo-nn",
    "crates/vearo-optim",
    "crates/vearo",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
license = "AGPL-3.0-or-later"
repository = ""
description = "Vearo a memory efficient, Rust native deep learning training framework."

[workspace.lints.rust]
unsafe_code = "deny"
missing_docs = "deny"
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"
perf = "deny"

# Shared dependency versions live here and are referenced from member crates
# with `dep.workspace = true` as we add them phase by phase.
[workspace.dependencies]
vearo-core = { path = "crates/vearo-core" }
vearo-autograd = { path = "crates/vearo-autograd" }
vearo-backend-cpu = { path = "crates/vearo-backend-cpu" }
vearo-backend-cuda = { path = "crates/vearo-backend-cuda" }
vearo-nn = { path = "crates/vearo-nn" }
vearo-optim = { path = "crates/vearo-optim" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

