[package]
name = "vearo-nn"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Neural network modules for Vearo: Linear, LayerNorm, attention."

[lints]
workspace = true

[dependencies]
vearo-core.workspace = true
vearo-autograd.workspace = true
[dev-dependencies]
vearo-backend-cpu.workspace = true
