[package]
name = "vearo-optim"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Optimizers for Vearo: SGD, AdamW, 8-bit Adam."

[lints]
workspace = true

[dependencies]
vearo-core.workspace = true
vearo-autograd.workspace = true
[dev-dependencies]
vearo-backend-cpu.workspace = true
