[package]
name = "vearo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vearo: a memory-efficient, Rust-native deep learning training framework."

[lints]
workspace = true

[dependencies]
vearo-core.workspace = true
vearo-autograd.workspace = true
vearo-backend-cpu.workspace = true
vearo-backend-cuda = { workspace = true, optional = true }
vearo-nn.workspace = true
vearo-optim.workspace = true

[features]
default = []
# Compiles and registers the CUDA backend. Requires a CUDA toolkit; without it
# Vearo runs CPU-only and Device::Cuda is unavailable.
cuda = ["dep:vearo-backend-cuda"]

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
